# QuestionComposition

./: .gitignore  CLAUDE.md
InputMaterials/: Test-QTI.xml  output20260527.xml  test_development.md  test_guideline.md  テスト用 .xlsx
RequirementsSpecification/: Moodle XML.md  QTI 1.2.md  QTI 2.1.md  QTI 2.2.md  QTI 3.0.md  Requirements.md  Requirements2add.md  Requirements3add.md  Requirements4add.md
outputs/: DevelopmentPlan.md  DevelopmentPlan_2026-05-26.md  DevelopmentPlan_2026-05-27.md  DevelopmentPlan_2026-05-27_revised.md  DevelopmentProcess_2026-05-27.md  FINAL_REPORT_2026-05-27.md  IMPLEMENTATION_PROGRESS_2026-05-27.md  TestReport_2026-05-27.md  TestResults.md  TestResults_2026-05-26.md  TestResults_2026-05-27.md  TestSpecification_2026-05-27.md  WINDOWS_BUILD_REPORT_2026-05-27.md  manual.md
outputs/past/: DevelopmentProcess.md  DevelopmentProcess_2026-05-26.md  TestSpecification.md  TestSpecification_2026-05-26.md
questionComposition/: Cargo.toml
questionComposition/Windows/: Windows-DLL-Research.md
questionComposition/src/: app.rs  generator.rs  lib.rs  main.rs  model.rs  rule_loader.rs
questionComposition/src/config/: crypto.rs  mod.rs
questionComposition/src/excel/: mod.rs  reader.rs  writer.rs
questionComposition/src/export/: mod.rs  moodle.rs  qti12.rs  qti21.rs  qti22.rs  qti30.rs
questionComposition/src/llm/: claude.rs  gemini.rs  mod.rs  openai.rs
questionComposition/src/ui/: export_panel.rs  generate_panel.rs  import_panel.rs  mod.rs  question_panel.rs  rule_panel.rs  settings_panel.rs
questionComposition/tests/: integration_test.rs
(+1 files in other folders)
